--- a/views/admin/order_Details.hbs
+++ b/views/admin/order_Details.hbs
@@ -95,7 +95,7 @@
                                 <p class="mb-2">Discount amount : ₹<strong>{{myOrderDetails.discountAmt}}</strong></p>
                                 <p class="mb-2" style="color: green;">Coupon used: {{myOrderDetails.coupon}}</p>
                                 {{else}}
-                                <p class="mb-2" style="color: green;">No coupon applied</p>
+                                {{!-- <p class="mb-2" style="color: green;">No coupon applied</p> --}}
                                 {{/if}}
 
                             </div>
