--- a/views/user/editProfile.hbs
+++ b/views/user/editProfile.hbs
@@ -18,12 +18,11 @@
                         <div class="col-md-3">
                             <div class="dashboard-menu">
                                 <ul class="nav flex-column" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link " id="dashboard-tab" data-bs-toggle="tab"
-                                            href="/profile" role="tab" aria-controls="dashboard"
-                                            aria-selected="false"><i
+                                     <li class="nav-item">
+                                        <a class="nav-link " id="dashboard-tab" href="/profile" role="tab"
+                                            aria-controls="dashboard" aria-selected="false"><i
                                                 class="fi-rs-settings-sliders mr-10"></i>Dashboard</a>
-                                    </li>
+                                    </li>   
                                     <li class="nav-item">
                                         <a class="nav-link" id="orders-tab" href="/myorders" role="tab"
                                             aria-controls="orders" aria-selected="false"><i
