--- a/views/user/changepassword.hbs
+++ b/views/user/changepassword.hbs
@@ -18,10 +18,9 @@
                         <div class="col-md-3">
                             <div class="dashboard-menu">
                                 <ul class="nav flex-column" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link " id="dashboard-tab" data-bs-toggle="tab"
-                                            href="/profile" role="tab" aria-controls="dashboard"
-                                            aria-selected="false"><i
+                                     <li class="nav-item">
+                                        <a class="nav-link " id="dashboard-tab" href="/profile" role="tab"
+                                            aria-controls="dashboard" aria-selected="false"><i
                                                 class="fi-rs-settings-sliders mr-10"></i>Dashboard</a>
                                     </li>
                                     <li class="nav-item">
