--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -37,14 +37,14 @@
                                         <td>₹{{multiply this.productPrice this.quantity }}</td>
                                     </tr>
                                     {{/each}}
-                                    <tr>
+                                    {{!-- <tr>
                                         <th> Coupon <span id="copoun_code">
                                                 <small></small>
                                             </span></th>
                                         <td colspan="2"><em><span id="discount_amt">
                                                     <span class="text-success">No Coupon</span>
                                                 </span></em></td>
-                                    </tr>
+                                    </tr> --}}
                                     {{!-- <tr>
                                         <th>SubTotal</th>
                                         <td class="product-subtotal" colspan="2">₹{{subTotal}}</td>
@@ -70,7 +70,7 @@
                             </table>
                         </div>
                         <div class="mb-30 mt-50">
-                            <div class="heading_s1 mb-3">
+                            {{!-- <div class="heading_s1 mb-3">
                                 <h4>Apply Coupon</h4>
                             </div>
                             <div class="total-amount">
@@ -98,10 +98,10 @@
                                         </form>
                                     </div>
                                 </div>
-                            </div>
+                            </div> --}}
                             <div class="col-lg-4">
 
-                                <button type="button" class="btn btn-fill-out btn-block " data-bs-toggle="collapse" data-bs-target="#couponList" aria-expanded="false" aria-controls="couponList"> <i class="fi-rs-label mr-10"></i> Show Available Coupons</button>
+                                {{!-- <button type="button" class="btn btn-fill-out btn-block " data-bs-toggle="collapse" data-bs-target="#couponList" aria-expanded="false" aria-controls="couponList"> <i class="fi-rs-label mr-10"></i> Show Available Coupons</button> --}}
 
                                 <div class="panel-collapse1 collapse coupon_form " id="couponList">
                                     <div class="panel-body">
@@ -164,26 +164,26 @@
                                     <label class="form-check-label" for="cash-on-delivery" data-bs-toggle="collapse"
                                         data-target="#bankTranfer" aria-controls="bankTranfer">Cash On Delivery</label>
                                 </div>
-                                <div class="custome-radio">
+                                {{!-- <div class="custome-radio">
                                     <input class="form-check-input" required="" type="radio" name="payment_option"
                                         value="razorpay" id="razorpay">
                                     <label class="form-check-label" for="razorpay" data-bs-toggle="collapse"
                                         data-target="#checkPayment" aria-controls="checkPayment"> Razor Pay</label>
-                                </div>
-                                <div class="custome-radio">
+                                </div> --}}
+                                {{!-- <div class="custome-radio">
                                     <input class="form-check-input" required="" type="radio" name="payment_option"
                                         value="wallet" id="wallet" >
                                     <label class="form-check-label" for="wallet" data-bs-toggle="collapse"
                                         data-target="#paypal" aria-controls="paypal"> Wallet</label>
-                                </div>
-                                <div class="hotline d-none d-lg-block">
+                                </div> --}}
+                                {{!-- <div class="hotline d-none d-lg-block">
 
                                     <p class="my-2 mx-2">Wallet Balance : <strong><span id="update_wallet">
                                                 ₹{{userData.wallet}}</span>
                                         </strong></p>
 
                                     <input type="hidden" value="{{userData.wallet}}" name="wallet">
-                                </div>
+                                </div> --}}
                             </div>
                         </div>
                         <span id="order_button">
