--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -23,7 +23,7 @@
                                     <ul class="nav flex-column" role="tablist">
                                     <li class="nav-item">
                                         <a class="nav-link active" id="dashboard-tab" 
-                                            href="#" role="tab" aria-controls="dashboard"
+                                            href="/profile" role="tab" aria-controls="dashboard"
                                             aria-selected="false"><i
                                                 class="fi-rs-settings-sliders mr-10"></i>Dashboard</a>
                                     </li>
