--- a/views/user/address.hbs
+++ b/views/user/address.hbs
@@ -50,10 +50,12 @@
                             </div>
                         </div>
                         <div class="col-md-9">
+                            <div class="col-lg-6 mb-3">
+                                <a href="/add_address" class="btn btn-primary"><i
+                                        class="text-muted material-icons md-post_add"></i>Add New Address</a>
+                            </div>
+
                             <div class="tab-content dashboard-content">
-
-
-                 
                                 <div class="tab-pane fade show active" id="address" role="tabpanel" aria-labelledby="address-tab">
                                    <div class="row">
                                 {{#each userAddress}}
@@ -78,10 +80,10 @@
                                 {{/each}}
 
                             </div>
-                            <div>
+                            {{!-- <div>
                                 <a href="/add_address" class="btn btn-primary"><i
                                         class="text-muted material-icons md-post_add"></i>Add New Address</a>
-                            </div>
+                            </div> --}}
                                 </div> 
                              
                             </div>
