--- a/views/user/productDetails.hbs
+++ b/views/user/productDetails.hbs
@@ -40,31 +40,34 @@
                             <div class="col-md-6 col-sm-12 col-xs-12">
                                 <div class="detail-info">
                                     <h2 class="title-detail">{{product.name}}</h2>
+                                    <div>
+                                        <span>Available in stock : {{product.stock}} </span>
+                                    </div>
                                     <div class="product-detail-rating">
                                         <div class="pro-details-brand">
                                             {{!-- <span> Brands: <a href="shop-grid-right.html">Bootstrap</a></span>
                                             --}}
                                         </div>
-                                        <div class="product-rate-cover text-end">
+                                        {{!-- <div class="product-rate-cover text-end">
                                             <div class="product-rate d-inline-block">
                                                 <div class="product-rating" style="width:90%">
                                                 </div>
                                             </div>
                                             <span class="font-small ml-5 text-muted"> (25 reviews)</span>
-                                        </div>
+                                        </div> --}}
                                     </div>
                                     <div class="clearfix product-price-cover">
                                         <div class="product-price primary-color float-left">
                                             <ins><span class="text-brand">₹{{product.price}}</span></ins>
-                                            <ins><span class="old-price font-md ml-15">₹{{ product.price}}</span></ins>
-                                            <span class="save-price  font-md color3 ml-15">25% Off</span>
+                                            {{!-- <ins><span class="old-price font-md ml-15">₹{{ product.price}}</span></ins> --}}
+                                            {{!-- <span class="save-price  font-md color3 ml-15">25% Off</span> --}}
                                         </div>
                                     </div>
                                     <div class="bt-1 border-color-1 mt-15 mb-15"></div>
                                     <div class="short-desc mb-30">
                                         <p>{{product.description}}</p>
                                     </div>
-                                     <div class="product_sort_info font-xs mb-30">
+                                    <div class="product_sort_info font-xs mb-30">
                                         <ul>
                                             <li class="mb-10"><i class="fi-rs-crown mr-5"></i> 1 Year AL Jazeera Brand
                                                 Warranty</li>
@@ -73,7 +76,6 @@
                                             <li><i class="fi-rs-credit-card mr-5"></i> Cash on Delivery available</li>
                                         </ul>
                                     </div>
-                               
                                     <div class="detail-extralink">
                                         <div class="border radius ">
                                             <input class="order__quantity--input" type="number" placeholder="1"
@@ -118,87 +120,93 @@
                                             <a aria-label="Compare" class="action-btn hover-up"
                                                 href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
                                         </div>
-                                </div>
-
-                                <div class="banner-img banner-big wow fadeIn f-none animated mt-50">
-                                    <img class="object-fit-cover border-radius-10"
-                                        src="/images/banners/gilles-lambert-pb_lF8VWaPU-unsplash.jpg" alt="">
-                                    <div class="banner-text">
-                                        <h4 class="mb-15 mt-40" style="color:beige">Repair Services</h4>
-                                        <h2 class="fw-600 mb-20" style="color: beige;">We're an Apple <br>Authorised
-                                            Service Provider</h2>
-                                    </div>
-                                </div>
-                                <div class="row mt-60">
-                                    <div class="col-12">
-                                        <h3 class="section-title style-1 mb-30">Related products</h3>
                                     </div>
 
-                                </div>
-                                <div class="tab-pane " id="tab-three" role="tabpanel" aria-labelledby="tab-three">
-                                    <div class="row product-grid-4">
-                                        {{#each relatedProducts}}
-                                        <div class="col-lg-3 col-md-4 col-12 col-sm-6">
-                                            <div class="product-cart-wrap mb-30">
-                                                <div class="product-img-action-wrap">
-                                                    <div class="product-img product-img-zoom">
-                                                        <a href="/productDetails/{{this._id}}">
-                                                            <img class="default-img"
-                                                                src="/images/products/{{this.image.[0]}}" alt="">
-                                                            <img class="hover-img"
-                                                                src="/images/products/{{this.image.[1]}}" alt="">
-                                                        </a>
+                                    <div class="banner-img banner-big wow fadeIn f-none animated mt-50">
+                                        <img class="object-fit-cover border-radius-10"
+                                            src="/images/banners/gilles-lambert-pb_lF8VWaPU-unsplash.jpg" alt="">
+                                        <div class="banner-text">
+                                            <h4 class="mb-15 mt-40" style="color:beige">Repair Services</h4>
+                                            <h2 class="fw-600 mb-20" style="color: beige;">We're an Apple <br>Authorised
+                                                Service Provider</h2>
+                                        </div>
+                                    </div>
+                                    <div class="row mt-60">
+                                        <div class="col-12">
+                                            <h3 class="section-title style-1 mb-30">Related products</h3>
+                                        </div>
+
+                                    </div>
+                                    <div class="tab-pane " id="tab-three" role="tabpanel" aria-labelledby="tab-three">
+                                        <div class="row product-grid-4">
+                                            {{#each relatedProducts}}
+                                            <div class="col-lg-3 col-md-4 col-12 col-sm-6">
+                                                <div class="product-cart-wrap mb-30">
+                                                    <div class="product-img-action-wrap">
+                                                        <div class="product-img product-img-zoom">
+                                                            <a href="/productDetails/{{this._id}}">
+                                                                <img class="default-img"
+                                                                    src="/images/products/{{this.image.[0]}}" alt="">
+                                                                <img class="hover-img"
+                                                                    src="/images/products/{{this.image.[1]}}" alt="">
+                                                            </a>
+                                                        </div>
+                                                        <div class="product-action-1">
+                                                            <a aria-label="Quick view" class="action-btn hover-up"
+                                                                data-bs-toggle="modal"
+                                                                data-bs-target="#quickViewModal"><i
+                                                                    class="fi-rs-eye"></i></a>
+                                                            <a aria-label="Add To Wishlist" class="action-btn hover-up"
+                                                                href="shop-wishlist.html"><i
+                                                                    class="fi-rs-heart"></i></a>
+                                                            <a aria-label="Compare" class="action-btn hover-up"
+                                                                href="shop-compare.html"><i
+                                                                    class="fi-rs-shuffle"></i></a>
+                                                        </div>
+                                                        <div
+                                                            class="product-badges product-badges-position product-badges-mrg">
+                                                            <span class="hot">Hot</span>
+                                                        </div>
                                                     </div>
-                                                    <div class="product-action-1">
-                                                        <a aria-label="Quick view" class="action-btn hover-up"
-                                                            data-bs-toggle="modal" data-bs-target="#quickViewModal"><i
-                                                                class="fi-rs-eye"></i></a>
-                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up"
-                                                            href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
-                                                        <a aria-label="Compare" class="action-btn hover-up"
-                                                            href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
-                                                    </div>
-                                                    <div
-                                                        class="product-badges product-badges-position product-badges-mrg">
-                                                        <span class="hot">Hot</span>
-                                                    </div>
-                                                </div>
-                                                <div class="product-content-wrap">
-                                                    <div class="product-category">
-                                                        <a href="shop-grid-right.html">{{this.category.category}}</a>
-                                                    </div>
-                                                    <h2><a href="/productDetails/{{this._id}}">{{this.name}}</a></h2>
-                                                    <div class="rating-result" title="90%">
-                                                        <span>
-                                                            <span>90%</span>
-                                                        </span>
-                                                    </div>
-                                                    <div class="product-price">
-                                                        <span>₹{{price}}</span>
-                                                        <span class="old-price">₹{{price}}</span>
-                                                    </div>
-                                                    <div class="product-action-1 show">
-                                                        <a aria-label="Add To Cart" class="action-btn hover-up"
-                                                            href="shop-cart.html"><i
-                                                                class="fi-rs-shopping-bag-add"></i></a>
+                                                    <div class="product-content-wrap">
+                                                        <div class="product-category">
+                                                            <a
+                                                                href="shop-grid-right.html">{{this.category.category}}</a>
+                                                        </div>
+                                                        <h2><a href="/productDetails/{{this._id}}">{{this.name}}</a>
+                                                        </h2>
+                                                        <div class="rating-result" title="90%">
+                                                            <span>
+                                                                <span>90%</span>
+                                                            </span>
+                                                        </div>
+                                                        <div class="product-price">
+                                                            <span>₹{{price}}</span>
+                                                            <span class="old-price">₹{{price}}</span>
+                                                        </div>
+
+                                                        <div class="product-action-1 show">
+                                                            <a aria-label="Add To Cart" class="action-btn hover-up"
+                                                                href="shop-cart.html"><i
+                                                                    class="fi-rs-shopping-bag-add"></i></a>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
+                                            {{/each}}
                                         </div>
-                                        {{/each}}
+                                        <!--End product-grid-4-->
                                     </div>
-                                    <!--End product-grid-4-->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-        </div>
+            </div>
     </section>
 </main>
- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
